--- a/Klut/Klut.csproj
+++ b/Klut/Klut.csproj
@@ -43,6 +43,11 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Streams\SourceStream.cs" />
+    <Compile Include="Streams\Stream.cs" />
+    <Compile Include="Streams\TokenStream.cs" />
+    <Compile Include="Tokens\Token.cs" />
+    <Compile Include="Tokens\TokenType.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
