--- a/Klut/Klut.csproj
+++ b/Klut/Klut.csproj
@@ -41,9 +41,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CodeGenerator.cs" />
+    <Compile Include="CodeSaver.cs" />
+    <Compile Include="Lexer.cs" />
+    <Compile Include="Optimizer.cs" />
+    <Compile Include="Parser.cs" />
+    <Compile Include="Parsing\ParseTree.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Streams\SourceStream.cs" />
+    <Compile Include="Semanter.cs" />
+    <Compile Include="TextProvider.cs" />
+    <Compile Include="Streams\CodeStream.cs" />
+    <Compile Include="Streams\ParseStream.cs" />
+    <Compile Include="Streams\TextStream.cs" />
     <Compile Include="Streams\Stream.cs" />
     <Compile Include="Streams\TokenStream.cs" />
     <Compile Include="Tokens\Token.cs" />
