Dfa: начать переделывать обработку ошибочных символов.

--- a/Klut/Klut.csproj
+++ b/Klut/Klut.csproj
@@ -59,8 +59,8 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="Modeling\DFA. Обработка ошибочных символов.dgml" />
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
